--- a/index.html
+++ b/index.html
@@ -12,39 +12,7 @@
     <link rel="stylesheet" href="Home/productTypes.css">
 </head>
 <body>
-<header class="topbar">
-    <div class="topbar-container">
-        <!-- Logo -->
-        <div class="topbar-logo">
-            <h1>KHT</h1>
-        </div>
-
-        <!-- Ô tìm kiếm -->
-        <div class="topbar-search">
-            <input type="text" placeholder="Bạn cần tìm kiếm sản phẩm gì?" />
-            <button>Tìm kiếm</button>
-        </div>
-
-        <!-- Giỏ hàng -->
-        <div class="topbar-cart">
-            <div class="cart-icon"><i class="fa-solid fa-cart-shopping"></i></div>
-            <div>Giỏ hàng</div>
-            <div class="cart-badge">3</div>
-        </div>
-
-        <!-- Hotline -->
-        <div class="topbar-hotline">
-            <div class="hotline-icon"><i class="fa-solid fa-phone"></i></div>
-            <div>Hotline</div>
-        </div>
-
-        <!-- Đăng nhập -->
-        <div class="topbar-login">
-            <div class="login-icon"><i class="fa-solid fa-user"></i></div>
-            <div>Đăng nhập</div>
-        </div>
-    </div>
-</header>
+<div id="header"></div>
 <div class="container">
     <div class="product">
         <div class="category-sidebar" role="navigation" aria-label="Danh mụcsản phẩm">
@@ -67,6 +35,7 @@
 <script src="Home/Category-sibar.js"></script>
 <script src="Home/Slide/silde.js"></script>
 <script src="Home/productTypes.js"></script>
+<script src="style/header.js"></script>
 
 </body>
 
