--- a/style/header.html
+++ b/style/header.html
@@ -5,37 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-<header class="topbar">
-    <div class="topbar-container">
-        <!-- Logo -->
-        <div class="topbar-logo">
-            <h1>KHT</h1>
-        </div>
 
-        <!-- Ô tìm kiếm -->
-        <div class="topbar-search">
-            <input type="text" placeholder="Bạn cần tìm kiếm sản phẩm gì?" />
-            <button>Tìm kiếm</button>
-        </div>
+<header class="site-header">
+    <div class="header-left">
+        <input type="checkbox" id="nav-toggle" hidden>
 
-        <!-- Giỏ hàng -->
-        <div class="topbar-cart">
-            <div class="cart-icon"><i class="fa-solid fa-cart-shopping"></i></div>
-            <div>Giỏ hàng</div>
-            <div class="cart-badge">3</div>
-        </div>
+        <a href="#" class="logo">META</a>
+    </div>
 
-        <!-- Hotline -->
-        <div class="topbar-hotline">
-            <div class="hotline-icon"><i class="fa-solid fa-phone"></i></div>
-            <div>Hotline</div>
-        </div>
+    <form class="searchbar" action="#" method="get">
+        <input type="text" name="q" placeholder="Tìm kiếm?" />
+        <button type="submit">Tìm kiếm</button>
+    </form>
 
-        <!-- Đăng nhập -->
-        <div class="topbar-login">
-            <div class="login-icon"><i class="fa-solid fa-user"></i></div>
-            <div>Đăng nhập</div>
-        </div>
+    <div class="header-right">
+        <a class="topbtn" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        <a class="topbtn" href="#"><i class="fa-solid fa-phone"></i></a>
+        <a class="topbtn" href="#"><i class="fa-solid fa-user"></i></a>
     </div>
 </header>
 </body>
