--- a/index.html
+++ b/index.html
@@ -3,39 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/header/header.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
-    <link rel="stylesheet" href="Home/Category-sibar.css">
-    <link rel="stylesheet" href="Home/HomeProduct.css">
+    <link rel="stylesheet" href="Home/Category/Category-sibar.css">
+    <link rel="stylesheet" href="Home/Product/HomeProduct.css">
     <link rel="stylesheet" href="Home/Slide/slide.css">
-    <link rel="stylesheet" href="Home/productTypes.css">
+    <link rel="stylesheet" href="Home/Product/productTypes.css">
+    <link rel="stylesheet" href="style/footer/footer.css">
+    <link rel="stylesheet" href="Home/Category/Categories.css">
 </head>
 <body>
 <div id="header"></div>
 <div class="container">
-    <div class="product">
-        <div class="category-sidebar" role="navigation" aria-label="Danh mụcsản phẩm">
-          <div class="category">
-                 <div class="category-header">
-                    <div class="burger" aria-hidden="true"><i class="fa-solid fa-bars menu-icon"></i></div>
-                    Danh mục sản phẩm
-                 </div>
-              <div id="category-list" class="category-list" role="list"></div>
-          </div><div id="slider"></div>
-            <div class="product-type-wrap">
-                <div id="product-type-grid" class="product-type-grid"></div>
-                <div class="product-type-actions">
-                    <button id="toggle-more" class="btn-more" aria-expanded="false">Xem thêm chuyên mục</button>
+        <div class="product">
+            <div class="category-sidebar" role="navigation" aria-label="Danh mụcsản phẩm">
+              <div class="category">
+                     <div class="category-header">
+                        <div class="burger" aria-hidden="true"><i class="fa-solid fa-bars menu-icon"></i></div>
+                        Danh mục sản phẩm
+                     </div>
+                  <div id="category-list" class="category-list" role="list"></div>
+              </div><div id="slider"></div>
+                <div class="product-type-wrap">
+                    <div id="product-type-grid" class="product-type-grid"></div>
+                    <div class="product-type-actions">
+                        <button id="toggle-more" class="btn-more" aria-expanded="false">Xem thêm chuyên mục</button>
+                    </div>
                 </div>
             </div>
+            <section id="dm-section"></section>
+
+            <div class="footer"></div>
         </div>
-    </div>
 </div>
-<script src="Home/Category-sibar.js"></script>
+<script src="Home/Category/categories.js"></script>
+
+<script src="style/footer/footer.js"></script>
+<script src="Home/Category/Category-sibar.js"></script>
 <script src="Home/Slide/silde.js"></script>
-<script src="Home/productTypes.js"></script>
-<script src="style/header.js"></script>
+<script src="Home/Product/productTypes.js"></script>
+<script src="style/header/header.js"></script>
 
 </body>
 
