Hoàn Thành Home và đóng gói

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style/header/header.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
     <link rel="stylesheet" href="Home/Category/Category-sibar.css">
@@ -43,7 +42,7 @@
 <script src="Home/Category/Category-sibar.js"></script>
 <script src="Home/Slide/silde.js"></script>
 <script src="Home/Product/productTypes.js"></script>
-<script src="style/header/header.js"></script>
+<script src="style/header/Module_header.js"></script>
 
 </body>
 
