--- a/style/header/header.html
+++ b/style/header/header.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
 <header class="site-header">
     <div class="header-left">
@@ -19,10 +12,9 @@
     </form>
 
     <div class="header-right">
-        <a class="topbtn" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        <a class="topbtn" href="#"><i class="fa-solid fa-phone"></i></a>
-        <a class="topbtn" href="#"><i class="fa-solid fa-user"></i></a>
+        <a class="topbtn" href="#"><i class="fa-solid fa-cart-shopping"></i>Giỏ Hàng </a>
+
+        <a class="topbtn" href="#"><i class="fa-solid fa-phone"> </i>Hotline</a>
+        <a class="topbtn" href="#"><i class="fa-solid fa-user"> </i>Đăng Nhập </a>
     </div>
 </header>
-</body>
-</html>
