Tạo trang login and profile người dùng

--- a/Login/login.html
+++ b/Login/login.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Đăng nhập META.vn</title>
   <link rel="stylesheet" href="login.css">
-  <link rel="stylesheet" href="../style/footer/footer.css">
 </head>
 <body>
   <!-- HEADER -->
@@ -36,11 +35,12 @@
       <button class="btn-social zalo">💬 Đăng nhập bằng Zalo</button>
       <button class="btn-social google">🌐 Đăng nhập bằng Google</button>
     </div>
-    <div class="footer"></div>
 
   </div>
   <!-- FOOTER -->
-  <script src="style/footer/footer.js"></script>
+  <div class="footer"></div>
+
+  <script src="/style/footer/footer.js"></script>
   <script src="../style/header/Module_header.js"></script>
 
 </body>
