--- a/Login/login.html
+++ b/Login/login.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Đăng nhập META.vn</title>
   <link rel="stylesheet" href="login.css">
-  <link rel="stylesheet" href="../style/header/header_not_log_reg.css" />
+  <link rel="stylesheet" href="../style/header/header.css" />
   <link rel="stylesheet" href="../style/footer/footer.css" />
 </head>
 <body>
