Làm thêm trang quản lý product

--- a/Admin/overview.html
+++ b/Admin/overview.html
@@ -31,7 +31,7 @@
         <nav class="menu">
             <a class="menu-item " href="overview.html">🏠 Tổng quan</a>
             <a class="menu-item " href="accounts.html">👥 Tài khoản</a>
-            <a class="menu-item" href="#products">🧰 Sản phẩm</a>
+            <a class="menu-item" href="products.html">🧰 Sản phẩm</a>
             <a class="menu-item" href="#orders">🧾 Đơn hàng</a>
             <a class="menu-item" href="#revenue">💹 Doanh thu</a>
             <a class="menu-item" href="#settings">⚙️ Cài đặt</a>
