them 1 so san pham khac vao chi tiet san pham

--- a/Home/Product_Detail/ProductDetail.html
+++ b/Home/Product_Detail/ProductDetail.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="ProductDetail.css">
     <link rel="stylesheet" href="../Product/HomeProduct.css">
     <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="view.css">
 
 </head>
 <body>
@@ -34,10 +35,19 @@
         <div class="detail">
             <section id="product-panel" class="product-panel"></section>
         </div>
+
+        <div id="viewed-root"></div>
+
     </div>
+    <div class="footer"></div>
+
+    <!-- Chỉ cần 1 cái móc -->
+
 
 </div>
+
 <div class="footer"></div>
+<script src="view.js"></script>
 
 <script src="../../style/footer/footer.js"></script>
 <script src="../../style/header/Module_header.js"></script>
