--- a/style/header/header.html
+++ b/style/header/header.html
@@ -3,7 +3,7 @@
     <div class="header-left">
         <input type="checkbox" id="nav-toggle" hidden>
 
-        <a href="#" class="logo">META</a>
+        <a href="/WebProject/index.html" class="logo">META</a>
     </div>
 
     <form class="searchbar" action="#" method="get">
@@ -12,7 +12,7 @@
     </form>
 
     <div class="header-right">
-        <a class="topbtn" href="#"><i class="fa-solid fa-cart-shopping"></i>Giỏ Hàng </a>
+        <a class="topbtn" href=""><i class="fa-solid fa-cart-shopping"></i>Giỏ Hàng </a>
 
         <a class="topbtn" href="#"><i class="fa-solid fa-phone"> </i>Hotline</a>
         <a class="topbtn" href="/WebProject/Login/login.html"><i class="fa-solid fa-user"> </i>Đăng Nhập </a>
