Hoàn thiêện chi tiết sản pẩm

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             </div>
             <section id="dm-section"></section>
 
-            <div class="footer"></div>
         </div>
-</div>
+    <div class="footer"></div>
+
+</div> <!-- JS sẽ render vào đây -->
+
 <script src="Home/Category/categories.js"></script>
 <script src="style/header/Module_header.js"></script>
 <script src="style/footer/footer.js"></script>
