--- a/Home/Product_Detail/ProductDetail.html
+++ b/Home/Product_Detail/ProductDetail.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8"/>
     <title>Chi tiết sản phẩm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="ProductDetail.css">
+    <link rel="stylesheet" href="CSS/ProductDetail.css">
     <link rel="stylesheet" href="../Product/HomeProduct.css">
     <link rel="stylesheet" href="../../style/style.css">
-    <link rel="stylesheet" href="view.css">
+    <link rel="stylesheet" href="CSS/view.css">
+    <link rel="stylesheet" href="CSS/inforProduct.css">
 
 </head>
 <body>
@@ -30,28 +31,25 @@
 
                 <button class="btn-nav" id="btnNext" aria-label="Ảnh sau">&rarr;</button>
             </div>
-
         </div>
         <div class="detail">
             <section id="product-panel" class="product-panel"></section>
         </div>
 
+        <div class="product-info"></div>
         <div id="viewed-root"></div>
-
     </div>
     <div class="footer"></div>
 
-    <!-- Chỉ cần 1 cái móc -->
-
-
 </div>
+<script src="JS/inforProduct.js"></script>
 
 <div class="footer"></div>
-<script src="view.js"></script>
+<script src="JS/view.js"></script>
 
 <script src="../../style/footer/footer.js"></script>
 <script src="../../style/header/Module_header.js"></script>
-<script src="product_detail.js"></script>
+<script src="JS/product_detail.js"></script>
 
 
 </body>
