Tạo Catalog (html,css,js)

--- a/Product_Detail/ProductDetail.html
+++ b/Product_Detail/ProductDetail.html
@@ -5,8 +5,8 @@
     <title>Chi tiết sản phẩm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="CSS/ProductDetail.css">
-    <link rel="stylesheet" href="../Product/HomeProduct.css">
-    <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="../Home/Product/HomeProduct.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="CSS/view.css">
     <link rel="stylesheet" href="CSS/inforProduct.css">
 
@@ -47,8 +47,8 @@
 <div class="footer"></div>
 <script src="JS/view.js"></script>
 
-<script src="../../style/footer/footer.js"></script>
-<script src="../../style/header/Module_header.js"></script>
+<script src="../style/footer/footer.js"></script>
+<script src="../style/header/Module_header.js"></script>
 <script src="JS/product_detail.js"></script>
 
 
