--- a/style/header/header.html
+++ b/style/header/header.html
@@ -15,6 +15,6 @@
         <a class="topbtn" href="#"><i class="fa-solid fa-cart-shopping"></i>Giỏ Hàng </a>
 
         <a class="topbtn" href="#"><i class="fa-solid fa-phone"> </i>Hotline</a>
-        <a class="topbtn" href="/WebProject/Login/login.html"><i class="fa-solid fa-user"> </i>Đăng Nhập </a>
+        <a class="topbtn" href="/Login/login.html"><i class="fa-solid fa-user"> </i>Đăng Nhập </a>
     </div>
 </header>
