--- a/User/User_sidebar/user_sidebar.html
+++ b/User/User_sidebar/user_sidebar.html
@@ -18,9 +18,9 @@
                 <li><i class="fa-regular fa-clock"></i> Lịch sử mua hàng</li>
                 <li><i class="fa-regular fa-eye"></i> Sản phẩm đã xem</li>
                 <li><i class="fa-regular fa-star"></i> Đánh giá của tôi</li>
-                <li><i class="fa-solid fa-ticket"></i> Mã giảm giá</li>
+                <!-- <li><i class="fa-solid fa-ticket"></i> Mã giảm giá</li>
                 <li><i class="fa-regular fa-file-lines"></i> Tra cứu bảo hành</li>
-                <li><i class="fa-solid fa-receipt"></i> Tra cứu hóa đơn</li>
+                <li><i class="fa-solid fa-receipt"></i> Tra cứu hóa đơn</li> -->
                 <li><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</li>
             </ul>
         </aside>
