--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                         Danh mục sản phẩm
                      </div>
                   <div id="category-list" class="category-list" role="list"></div>
-              </div><div id="slider"></div>
+              </div>
+                <div id="slider"></div>
                 <div class="product-type-wrap">
                     <div id="product-type-grid" class="product-type-grid"></div>
                     <div class="product-type-actions">
